--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header>
+        <h1>Tic-Tac-Toe</h1>
+    </header>
+
+    <div class="main-content">
+        <div class="grid">
+            
+        </div>
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
