Create a displayController IIFE

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     </header>
 
     <div class="main-content">
+        <div class="player-display">
+            Current Player Turn: <span class="player-turn">X</span>
+        </div>
         <div class="grid">
             
         </div>
+        <button class="restart-btn">Restart Game</button>
     </div>
     <script src="js/scripts.js"></script>
 </body>
