Add display for the winner player

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="player-display">
             Current Player Turn: <span class="player-turn">X</span>
         </div>
+        <div class="winner-div">
+            <span></span>
+        </div>
         <div class="grid">
             
         </div>
